@@ -25,30 +25,32 @@ class JsonAdaptedEvent {
     private final String name;
     private final JsonAdaptedTime time;
     private final String venue; // Optional, can be null
-    private final JsonAdaptedPerson celebrity;
-    private final Set<JsonAdaptedPerson> contacts = new HashSet<>();
+    private final String celebrityName;
+    private final Set<String> contactNames = new HashSet<>();
 
     /**
      * Constructs a {@code JsonAdaptedEvent} with the given event details.
      */
     @JsonCreator
-    public JsonAdaptedEvent(@JsonProperty("name") String name, @JsonProperty("time") JsonAdaptedTime time,
-            @JsonProperty("venue") String venue, @JsonProperty("celebrity") JsonAdaptedPerson celebrity,
-            @JsonProperty("contacts") List<JsonAdaptedPerson> contacts) {
+    public JsonAdaptedEvent(@JsonProperty("name") String name,
+                            @JsonProperty("time") JsonAdaptedTime time,
+                            @JsonProperty("venue") String venue,
+                            @JsonProperty("celebrityName") String celebrityName,
+                            @JsonProperty("contactNames") List<String> contactNames) {
         this.name = name;
         this.time = time;
         this.venue = venue;
-        this.celebrity = celebrity;
-        this.contacts.addAll(contacts);
+        this.celebrityName = celebrityName;
+        this.contactNames.addAll(contactNames);
     }
 
     /**
      * Constructs a {@code JsonAdaptedEvent} without a venue, with the given event details.
      */
     public JsonAdaptedEvent(@JsonProperty("name") String name, @JsonProperty("time") JsonAdaptedTime time,
-            @JsonProperty("celebrity") JsonAdaptedPerson celebrity,
-            @JsonProperty("contacts") List<JsonAdaptedPerson> contacts) {
-        this(name, time, null, celebrity, contacts);
+            @JsonProperty("celebrity") String celebrityName,
+            @JsonProperty("contacts") List<String> contactNames) {
+        this(name, time, null, celebrityName, contactNames);
     }
 
     /**
@@ -58,10 +60,18 @@ class JsonAdaptedEvent {
         name = source.getName().getEventName();
         time = new JsonAdaptedTime(source.getTime());
         venue = source.getVenue().map(Venue::toString).orElse(null);
-        celebrity = new JsonAdaptedPerson(source.getCelebrity());
-        contacts.addAll(source.getContacts().stream()
-                .map(JsonAdaptedPerson::new)
-                .collect(Collectors.toList()));
+        celebrityName = source.getCelebrity().getName().fullName;
+        contactNames.addAll(source.getContacts().stream()
+                .map(contact -> contact.getName().fullName)
+                .toList());
+    }
+
+    public String getCelebrityName() {
+        return celebrityName;
+    }
+
+    public Set<String> getContactNames() {
+        return contactNames;
     }
 
     /**
@@ -69,11 +79,11 @@ class JsonAdaptedEvent {
      * Returns a {@code JsonAdaptedEvent} object using the different constructors given the respective fields.
      */
     public static JsonAdaptedEvent createJsonAdaptedEvent(String name, JsonAdaptedTime time, String venue,
-            JsonAdaptedPerson celebrity, List<JsonAdaptedPerson> contacts) {
+            String celebrityName, List<String> contactNames) {
         if (venue == null) {
-            return new JsonAdaptedEvent(name, time, celebrity, contacts);
+            return new JsonAdaptedEvent(name, time, celebrityName, contactNames);
         } else {
-            return new JsonAdaptedEvent(name, time, venue, celebrity, contacts);
+            return new JsonAdaptedEvent(name, time, venue, celebrityName, contactNames);
         }
     }
 
@@ -82,12 +92,7 @@ class JsonAdaptedEvent {
      *
      * @throws IllegalValueException if there were any data constraints violated in the adapted event.
      */
-    public Event toModelType() throws IllegalValueException {
-        final Set<Person> eventContacts = new HashSet<>();
-        for (JsonAdaptedPerson contact : contacts) {
-            eventContacts.add(contact.toModelType());
-        }
-
+    public Event toModelType(Person celebrity, Set<Person> eventContacts) throws IllegalValueException {
         if (name == null) {
             throw new IllegalValueException(
                     String.format(MISSING_FIELD_MESSAGE_FORMAT, EventName.class.getSimpleName())
@@ -108,9 +113,8 @@ class JsonAdaptedEvent {
         if (celebrity == null) {
             throw new IllegalValueException(String.format(MISSING_FIELD_MESSAGE_FORMAT, Person.class.getSimpleName()));
         }
-        final Person eventCelebrity = celebrity.toModelType();
 
-        return Event.createEvent(eventName, eventTime, eventVenue, eventCelebrity, eventContacts);
+        return Event.createEvent(eventName, eventTime, eventVenue, celebrity, eventContacts);
     }
 
 }
